<resources>
    <string name="app_name">Login</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonRegistrieren">Registrieren</string>
    <string name="buttonHochladen">Hochladen</string>
    <string name="buttonZuRegistrieren">Kein Account? \n hier registrieren</string>
    <string name="buttonUeberspringen">Überspringen</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextPassword">Passwort</string>
    <string name="pictureAltText">Profile Picture</string>
    <string name="fotoHochladen">Foto Hochladen</string>
    <string name="willkommen">Willkommen</string>
    <string name="benutzerListe">Benutzerliste</string>
    <string name="textViewZuRegistrieren">\ Kein Account?\nHier registrieren</string>
    <string name="editTextPasswordBestaetigen">Passwort bestätigen</string>
    <string name="textViewRegistrierem">Registrieren</string>
    <string name="editTextVorname">Vorname</string>
    <string name="editTextNachname">Nachname</string>
    <string name="textViewZuLogin"> Du hast ein Konto? \n\ \ \ \ Melde dich an</string>
    <string name="fragmentBeschreibung">Ein Eintrag innerhalb der Liste</string>
    <string name="listenFotoBeschreibung">Das Profilbild in einem Listeneintrag</string>
    <string name="erstelleBenutzer">Erstelle Benutzer</string>
    <string name="benutzerListenBeschreibung">Diese Aktivität zeigt alle Benutzer innerhalb einer Liste</string>
    <string name="benutzerDatenBeschreibung">Diese Aktivität zeigt die Daten eines einzelnen Benutzers an</string>
    <string name="defaultFotoBeschreibung">Das ist das Bild für einen Benutzer der kein Foto definiert hat</string>
    <string name="vorname"></string>
    <string name="nachname"></string>
    <string name="buttonLogout">Abmelden</string>
    <string name="informationen">Informationen</string>
</resources>
