<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyColor">

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="107dp"
        android:layout_height="0dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="152dp"
        android:layout_marginRight="152dp"
        android:background="@color/blueColor"
        android:onClick="goToWelcomeActivity"
        android:text="@string/buttonRegistrieren"
        android:textColor="@color/whiteColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextConfirmPassword" />

    <TextView
        android:id="@+id/textViewToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginLeft="144dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="145dp"
        android:layout_marginRight="145dp"
        android:onClick="goToLogin"
        android:text="@string/textViewZuLogin"
        android:textColor="@color/blueColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <TextView
        android:id="@+id/textViewRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="111dp"
        android:layout_marginBottom="34dp"
        android:text="@string/textViewRegistrierem"
        android:textColor="@color/blackColor"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextFirstName"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextVorname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextLastname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterTitle" />

    <EditText
        android:id="@+id/editTextLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextNachname"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmailRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextFirstName"
        app:layout_constraintTop_toBottomOf="@+id/editTextFirstName" />

    <EditText
        android:id="@+id/editTextEmailRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/editTextPasswortRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextLastname"
        app:layout_constraintTop_toBottomOf="@+id/editTextLastname" />

    <EditText
        android:id="@+id/editTextPasswortRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/editTextPassword"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/editTextConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailRegister" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/editTextPasswordBestaetigen"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/editTextPasswortRegister"
        app:layout_constraintTop_toBottomOf="@+id/editTextPasswortRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>