<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyColor">

    <TextView
        android:id="@+id/buttonUeberspringen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:onClick="goToWelcomeActivity"
        android:text="@string/buttonUeberspringen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newApprentice_apprenticePhoto" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/fotoHochladen"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/newApprentice_apprenticePhoto"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/pictureAltText"
        android:src="@drawable/account_circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/newApprentice_photoButton"
        android:layout_width="56dp"
        android:layout_height="53dp"
        android:background="@drawable/camera_alt"
        android:contentDescription="@string/editTextVorname"
        app:layout_constraintBottom_toBottomOf="@+id/newApprentice_apprenticePhoto"
        app:layout_constraintEnd_toEndOf="@+id/newApprentice_apprenticePhoto" />

</androidx.constraintlayout.widget.ConstraintLayout>