<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apprenticelist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:contentDescription="@string/benutzerListenBeschreibung"
    tools:context=".activities.UserListActivity">

    <TextView
        android:id="@+id/apprenticelist_lastnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:text="@string/editTextNachname"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/apprenticelist_apprenticesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.525"
        app:layout_constraintStart_toEndOf="@+id/apprenticelist_firstnameTextView" />

    <TextView
        android:id="@+id/apprenticelist_firstnameTextView"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="32dp"
        android:text="@string/editTextVorname"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/apprenticelist_apprenticesList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.273"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/apprenticelist_apprenticesList"
        android:layout_width="401dp"
        android:layout_height="386dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="128dp"
        android:maxHeight="350dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/apprenticelist_divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/benutzerListe"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>